--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ section {
 }
 
 .certs-content {
-  width: 35vw;
+  width: 37vw;
   display: flex;
   align-items: center;
   gap: 1.5rem;
@@ -158,6 +158,8 @@ section {
 }
 
 .more-content {
+  display: flex;
+  justify-content: center;
   font-size: 2rem;
   margin-left: 2%;
   flex-direction: column;
@@ -176,6 +178,43 @@ section {
   display: flex;
   justify-content: space-between;
   text-align: justify;
+}
+
+.azure {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.azure-content {
+  margin-right: 4rem;
+}
+
+.azure-content h3 {
+  font-size: 3.2rem;
+  font-weight: 700;
+}
+
+.azure-content h1 {
+  font-size: 5.6rem;
+  font-weight: 700;
+  line-height: 1.3;
+  color: var(--main-color);
+}
+
+.azure-content h3:nth-of-type(2) {
+  margin-bottom: 3rem;
+}
+
+.azure-content p {
+  font-size: 2rem;
+  display: flex;
+  justify-content: space-between;
+  text-align: justify;
+}
+
+.diagram img {
+  width: 54vw;
 }
 
 .footer {
@@ -250,6 +289,18 @@ section {
   .footer {
     padding: 2rem 3%;
   }
+
+  .azure {
+    padding: 10rem 3% 2rem;
+  }
+
+  .azure-content {
+    margin-right: 0;
+  }
+
+  .diagram img {
+    width: 80vw;
+  }
 }
 
 @media (max-width: 768px) {
@@ -295,6 +346,23 @@ section {
 
   .button {
     margin-bottom: 1rem;
+  }
+
+  .azure {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .azure-content h1 {
+    font-size: 5rem;
+  }
+
+  .diagram img {
+    width: 90vw;
+  }
+
+  .azure-content p {
+    margin-bottom: 5rem;
   }
 }
 
@@ -342,6 +410,10 @@ section {
   .footer p {
     text-align: center;
     margin-top: 2rem;
+  }
+
+  .azure-content h1 {
+    font-size: 4rem;
   }
 }
 
